objects/EventAuditTrail__c.object
<CustomObject>
    <fields>
        <fullName>Event_Message__c</fullName>
        <label>Event Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Internal Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Request__c</fullName>
        <description>Call out request body to an external system (Integration)</description>
        <label>Integration Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Response__c</fullName>
        <description>Call out response body (Integration)</description>
        <label>Integration Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>EventAuditTrails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Message__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type__c</field>
            <operation>equals</operation>
            <value>Internal Workflow</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EventAuditTrail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>